external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_pack_mname_non_addr.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:4:14
  │
4 │         false::M::S { }
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:8:9
  │
8 │         fun bar()::bar()::M::S { }
  │         ^^^
  │         │
  │         Unexpected 'fun'
  │         Expected an expression term

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:8:18
  │
8 │         fun bar()::bar()::M::S { }
  │                  ^^
  │                  │
  │                  Unexpected '::'
  │                  Expected '{'

